--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,25 @@
-name: Test Devops
+name: Test DevOps
 
 on:
-  push:
-    branches: [ main ]
+    push:
+        branches: [main]
 
 jobs:
-  build-and-test:
-    runs-on: ubuntu-latest
+    build-and-test:
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout du code
+              uses: actions/checkout@v4
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+            - name: Build l'image docker
+              run: docker build -t my-app:${{github.sha}} .
 
-      - name: Build
-        run: docker build -t my-app:${{ github.sha }} .
+            - name: Simulation des tests unitaires
 
-      - name: Tests unitaires
-        run: |
-          echo "lancements tests"
-          docker run -d --name test-container my-app:${{ github.sha }}
-          sleep 5
-          docker exec test-container nginx -t && echo "Tests unitaires réussis"
-          docker stop test-container
+              run: |
+                  echo "Lancement des tests..."
+                  docker run -d --name test-container my-app:${{github.sha}}
+                  sleep 5
+                  docker exec test-container nginx -t
+                  echo "Test réussis!"
+                  docker stop test-container
